--- a/filter.html
+++ b/filter.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search filter | Project</title>
-    <link rel="stylesheet" href="filter.css">
+    <link rel="stylesheet" href="./filter.css">
     <link rel="stylesheet" href="/fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.css">
 </head>
 <body>
@@ -43,6 +43,6 @@
 
 
 
-    <script src="/filter.js"></script>
+    <script src="./filter.js"></script>
 </body>
 </html>
