--- a/filter.html
+++ b/filter.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search filter | Project</title>
     <link rel="stylesheet" href="./filter.css">
-    <link rel="stylesheet" href="/fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.0.0-web/fontawesome-free-6.0.0-web/css/all.css">
 </head>
 <body>
     <section id="container">
